portainer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-portainer
  namespace: portainer
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: portainer.lan.repe.re
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9000
